@@ -87,6 +87,20 @@ import|;
 end_import
 
 begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FileStatus
+import|;
+end_import
+
+begin_import
 import|import static
 name|org
 operator|.
@@ -609,6 +623,88 @@ block|}
 name|assertIsDirectory
 argument_list|(
 name|root
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testListEmptyRootDirectory ()
+specifier|public
+name|void
+name|testListEmptyRootDirectory
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+comment|//extra sanity checks here to avoid support calls about complete loss of data
+name|skipIfUnsupported
+argument_list|(
+name|TEST_ROOT_TESTS_ENABLED
+argument_list|)
+expr_stmt|;
+name|FileSystem
+name|fs
+init|=
+name|getFileSystem
+argument_list|()
+decl_stmt|;
+name|Path
+name|root
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/"
+argument_list|)
+decl_stmt|;
+name|FileStatus
+index|[]
+name|statuses
+init|=
+name|fs
+operator|.
+name|listStatus
+argument_list|(
+name|root
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|FileStatus
+name|status
+range|:
+name|statuses
+control|)
+block|{
+name|ContractTestUtils
+operator|.
+name|assertDeleted
+argument_list|(
+name|fs
+argument_list|,
+name|status
+operator|.
+name|getPath
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+literal|"listStatus on empty root-directory returned a non-empty list"
+argument_list|,
+literal|0
+argument_list|,
+name|fs
+operator|.
+name|listStatus
+argument_list|(
+name|root
+argument_list|)
+operator|.
+name|length
 argument_list|)
 expr_stmt|;
 block|}
