@@ -5089,6 +5089,41 @@ argument_list|)
 argument_list|)
 return|;
 block|}
+elseif|else
+if|if
+condition|(
+name|key
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Found root directory"
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|S3AFileStatus
+argument_list|(
+literal|true
+argument_list|,
+literal|true
+argument_list|,
+name|f
+operator|.
+name|makeQualified
+argument_list|(
+name|uri
+argument_list|,
+name|workingDir
+argument_list|)
+argument_list|)
+return|;
+block|}
 block|}
 catch|catch
 parameter_list|(
